Changing classes name to Xmas theme Removing test <h2>

--- a/styles.css
+++ b/styles.css
@@ -100,36 +100,36 @@ body {
   transform: rotateY(0); 
 }
 
-.cob-web {
+.snowflakeFront {
   position: absolute;
   transition: width 100ms ease-in-out, height 100ms ease-in-out;
   width: 47px;
   height: 47px;
 }
 
-.card-face:hover .cob-web {
+.card-face:hover .snowflakeFront {
   width: 52px;
   height: 52px;
 }
 
-.cob-web-top-left {
+.snowflakeFront-top-left {
   transform: rotate(270deg);
   top: 0;
   left: 0;
 }
 
-.cob-web-top-right {
+.snowflakeFront-top-right {
   top: 0;
   right: 0;
 }
 
-.cob-web-bottom-left {
+.snowflakeFront-bottom-left {
   transform: rotate(180deg);
   bottom: 0;
   left: 0;
 }
 
-.cob-web-bottom-right {
+.snowflakeFront-bottom-right {
   transform: rotate(90deg);
   bottom: 0;
   right: 0;
