Added subtitles to cards

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ body {
 .card-face {
   position: absolute;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
